Designed portfolio site.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swagatam</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-    <h1>This site is under construction.</h1>
+
+    <section class="about-me">
+        
+        <h1 id="aboutTitle">
+            <div class="about-title-before"></div>
+            <span>
+                <span>adr420</span>
+            </span>
+            <div class="about-title-after"></div>
+        </h1>
+        
+        <img id="aboutImg" src="myPic.jpeg" alt="Aditya Rai" />
+        <p id="aboutText">
+            <i>Namaste!</i>
+            <br/>
+            I am Aditya Rai a hobbyist coder, freelancer and a guy who loves to make and play games.
+            I have experience in Game Development, Web App Deveplopment and I can also build desktop apps in Java.
+            Currently I am learning about android and arm assembly.
+            <br/>
+            <br/>
+            Some of My projects are listed below:
+        </p>
+
+        <ul id="aboutProjects">
+            <li><a href="https://github.com/harryBhaiKaFan/Aillery">Aillery</a></li>
+            <li><a href="https://github.com/harryBhaiKaFan/iXX">Some games</a></li>
+            <li><a href="https://github.com/harryBhaiKaFan/static_site">Business Landing Page</a></li>
+            <li><a href="https://github.com/harryBhaiKaFan/mango">Mango &minus; Text editor</a></li>
+        </ul>
+    </section>
 </body>
+
 </html>
